--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>iPortfolio intan nuraeni</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -45,7 +45,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/intan.jpeg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/intan.jpeg" width="100px" height="100px" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">INtan nuraeni</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
