--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/ii.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/2.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
